--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,34 @@
-pyrogram
-tgcrypto
-aiohttp
-feedparser
-requests
-beautifulsoup4
-pymongo
+# Core dependencies
+pyrogram==2.0.106
+tgcrypto==1.2.5
+aiohttp==3.8.5
+asyncio==3.4.3
+motor==3.3.1
+pymongo==4.5.0
+
+# Web scraping
+beautifulsoup4==4.12.2
+lxml==4.9.3
+cloudscraper==1.2.71
+requests==2.31.0
+
+# Web server
+aiohttp-jinja2==1.5.1
+jinja2==3.1.2
+
+# Utilities
+python-dotenv==1.0.0
+pytz==2023.3
+urllib3==2.0.7
+certifi==2023.7.22
+charset-normalizer==3.2.0
+idna==3.4
+attrs==23.1.0
+multidict==6.0.4
+yarl==1.9.2
+packaging==23.1
+
+# Optional but recommended for better performance
+ujson==5.8.0
+aiodns==3.0.0
+cchardet==2.1.7
